# FitsView

./: .gitignore  FS014_091226_1_J.coo  FS014_091226_1_J.lst  FitsView.cfg  FitsView.hlp  FitsView.py  FitsView_gui.py  FitsView_image.py  FitsView_widgets.py  README.md  backup.cfg  notes.txt  pymage.cfg  pymage.py  pymage_gui.py  pymage_image.py  pyproject.toml  test.txt
fitsview/: FitsView.cfg  FitsView.hlp  FitsView_gui.py  FitsView_image.py  FitsView_widgets.py  fitsview.py
